fix: adjust input width in Footer styles for better alignment

--- a/app/shared/ui/Footer/footer.module.scss
+++ b/app/shared/ui/Footer/footer.module.scss
@@ -67,7 +67,7 @@
     position: relative;
     input {
       border-radius: 16px;
-      width: 476px;
+      width: 470px;
       height: 52px;
       border: none;
       padding-left: 1.2rem;
